#MC-372 Add Work 2h changes Footer logos to white version and fixes size and alignment

--- a/micorr/static/stylesheets/mystyle.css
+++ b/micorr/static/stylesheets/mystyle.css
@@ -1580,7 +1580,12 @@ img {
   max-width: 100%;
   height: auto;
 }
-
+.img-logos {
+  display: inline;
+  float:left;
+  height: 50px;
+  padding-left:20px;
+}
 .img-rounded {
   border-radius: 6px;
 }
